--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -11,9 +11,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: |
-            actions/checkout@v3
-            actions/setup-node@v3
+        uses: actions/checkout@v3
+        
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
         with:
           node-version: 18
 
